--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/pickupline_icon"
@@ -16,7 +18,7 @@
         <activity
             android:name=".IntroActivity"
             android:screenOrientation="portrait" >
-            android:label="@string/app_name" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,36 +28,53 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" >
-            android:label="@string/title_activity_main" >
+            
         </activity>
         <activity
             android:name=".StreetLinesActivity"
             android:screenOrientation="portrait" >
-            android:label="@string/title_activity_street_lines" >
+ 
         </activity>
         <activity
             android:name=".ClubLinesActivity"
             android:screenOrientation="portrait" >
-            android:label="@string/title_activity_club_lines" >
+            
         </activity>
         <activity
             android:name=".PubLinesActivity"
             android:screenOrientation="portrait" >
-            android:label="@string/title_activity_pub_lines" >
+            
         </activity>
         <activity
             android:name=".CasualLinesActivity"
             android:screenOrientation="portrait" >
-            android:label="@string/title_activity_casual_lines" >
+           
         </activity>
         <activity
             android:name=".FavoritesList"
             android:screenOrientation="portrait" >
-            android:label="@string/title_activity_favorites_list" >
+            
         </activity>
         <activity
-            android:name=".ShowFavoriteLine"
+            android:name=".ShowFavoriteLine">
             android:label="@string/title_activity_show_favorite_line" >
+        </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name=".FacebookLogActivity">
+            android:label="@string/title_activity_facebook_log" >
+        </activity>
+        <activity
+            android:name="com.facebook.LoginActivity">
+            android:label="@string/title_login_activity" >
+        </activity>
+        <activity
+            android:name=".HelpActivity">
+            android:label="@string/title_activity_help_acrivity" >
         </activity>
     </application>
 
