--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7
+android.library.reference.1=..\\appcompat_v7
+android.library.reference.2=../../Documents/SDK's/facebook-android-sdk-3.19.1/facebook-android-sdk-3.19.1/facebook
